Revert "issue-664-ctas fix wrapping arrow on default CTA"
This reverts commit 68176f52a19f043e139b73281ca2fc39d1fd408e.

--- a/elements/pfe-cta/demo/demo.css
+++ b/elements/pfe-cta/demo/demo.css
@@ -32,7 +32,7 @@
   }
 
   .force-wrap {
-      max-width: 231px;
+      max-width: 200px;
   }
 
   .card-layout {
